@@ -4,6 +4,7 @@ v0.17.0
 * Animated showing and hiding of the replace bar.
 * Removed support to substitution lists in XML.
 * Changed shortcuts because Shift+F8 is for the WebIDE. The new ones are F9 to show the replace bar and Shift+F9 to apply the substitution list (issue 154).
+* Fixed subscription to a local URL for Firefox 35+ (issue 157).
 * Compatibility with Firefox from 30.0 to 38.0.
 
 v0.16.1 (2014-06-13)
